[package]
edition = "2024"
name = "sepial"
version = "0.1.0"

[dependencies]
anyhow = { version = "1", default-features = false }
serial2-tokio = { version = "0,>=0.1", default-features = false }
tokio = { version = "1", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
